<resources>
    <string name="app_name">7MinutesWorkout</string>
    <string name="start">START</string>
    <string name="starting_image">Starting image</string>
    <string name="get_ready">Get Ready!</string>
    <string name="exercisename">ExerciseName</string>
    <string name="next_exercise">Next Exercise :</string>
    <string name="end">END</string>
    <string name="finish_announcement">Congratulations! You\'ve finished!</string>
    <string name="finish">FINISH</string>
</resources>