<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbFinish"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="4dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEND"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/tbFinish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/end"
        />

    <ImageView
        android:id="@+id/ivFinish"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvEND"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/finish_circle"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/tvAnnouncement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/ivFinish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/finish_announcement"
        />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/finish"
        app:layout_constraintTop_toBottomOf="@id/tvAnnouncement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />






</androidx.constraintlayout.widget.ConstraintLayout>